
- ZON-2980: Configure rawr return url parameter to work with our SSO

- ZON-2906: Add module headerimage to ZEIT Campus

- ZON-2990: Add image copyrights to ZEIT Campus

- ZON-2522: Introduce comments to ZEIT Campus

- ZON-2961: SVG – back to the roots (render SVGs inline)

- FIX: Support non-ascii uniqueIds (and other bugsnag)

- BUG-396: Enable nextread link and image copyrights

- MAINT: Fix ZEIT Campus column article header image


2.71.3 (2016-04-13)
-------------------

- HOTFIX: Make ranking areas work again on dynamic centerpages

- MAINT: Fix pysolr error handling of non-ascii server responses


2.71.2 (2016-04-12)
-------------------

- HOTFIX: Add a bit more teaser margin

- HOTFIX: Add more space to ZMO comment counter

- HOTFIX: Make images in parquet feeds (spektrum, zett) work again

- HOTFIX: Make old-style <intial> paragraphs work again

- BUG-377: Ensure correct sort order for search result area

- FIX: Handle non-ascii author email addresses

- MAINT: Send per-request memory delta to statsd

- MAINT: Polish topic teaser variant


2.71.1 (2016-04-11)
-------------------

- HOTFIX: Include ad-tile in ZMO minor


2.71 (2016-04-11)
-----------------

- ZON-1626: Update ZMO-CPs to the z.c.cp-3.x data model,
            update CSS and templates to the ZON best practises

- ZON-2878: Allow specifying a background color for teaser images with
            transparent backgrounds


2.70 (2016-04-11)
-----------------

- FIX: Handle non-ascii usernames in nojs comment form

- BUG-346: Limit the number of items in jobbox

- BUG-385: Consider paragraph length when inserting ads

- ZON-2494: Implement stoa in-article-block

- ZON-2870: Implement login cut mark for framebuilder

- ZON-2651: Include SSO information in the JS rawr config object

- ZON-2890: Add packshot with follow-us button and subscription box

- ZON-2930: Add separate feed `rss-socialflow-facebook-zco`

- ZON-2913: Display ads in ZETT parquet
